<resources>

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Popular Movies 2</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Popular Movie Settings</string>

    <!-- Bottom navigation bar menu items[CHAR LIMIT=NONE] -->
    <string name="movies_top_rated">Top rated</string>
    <string name="movies_most_popular">Popular</string>
    <string name="movies_favorite">Favourites</string>

    <!-- Strings for Order-By preference settings[CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <!-- Default setting for Order-By preference -->
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>

    <!-- Label for order-by most popular option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_popular_label">Most Popular</string>
    <string name="settings_order_by_most_popular_value" translatable="false">0</string>

    <!-- Label for order-by highest rated option [CHAR LIMIT=20] -->
    <string name="settings_order_by_highest_rated_label">Highest Rated</string>
    <string name="settings_order_by_highest_rated_value" translatable="false">1</string>

    <!-- Movie Discovery Activity -->
    <string name="title_movie_detail">Movie Details</string>
    <string name="no_poster">No movie poster available for this movie</string>
    <string name="movie_discovery_no_network">No network connection.</string>
    <!-- Accessibility strings -->
    <string name="movie_discovery_image_of_movie_poster">Image of movie poster</string>

    <!-- Activity_movie_detail -->
    <!-- Accessibility strings -->
    <string name="movie_detail_description_movie_poster">A picture of the movies backdrop poster</string>
    <string name="movie_detail_add_to_favorites_button">add to favorites button</string>

    <!-- User rating, year of release, certificate -->
    <string name="movie_detail_vote_average_label">voted</string>
    <string name="movie_detail_release_year_label">released</string>

    <!-- system string resources -->
    <string name="movie_discovery_no_movies">No movies of the type requested were found.</string>

    <!-- Favorites fragment -->
    <string name="empty_state_text_view_favorites">Click the heart on a movie to add to your favorites</string>
    <string name="reviews">Reviews</string>
    <string name="movie_detail_no_reviews">No reviews available for this movie</string>
    <string name="movie_detail_review_title">reviews</string>
    <string name="movie_detail_trailer_title">Trailers</string>
    <string name="no_videos_available">No videos available for this movie</string>
    <string name="movie_detail_description_title">overview</string>
    <string name="press_to_play_trailer_on_youtube">Press to play trailer on youtube</string>
    <string name="empty_state_text_view_no_network">No network connection.</string>
    <string name="share_video">share this video with a friend</string>
    <string name="share_this_video">Share this video</string>
</resources>
